# GPS-Odometer_pi

./: .gitignore  .travis.yml  CMakeLists.txt  Odometer-plugin.xml.in  README.md  VERSION.cmake  appveyor.yml  appveyor.yml.save
.circleci/: config - Copy.yml  config-no-and-mingw.yml  config.yml
api-16/: ocpn_plugin.h
ci/: control
ci/extras/: build-ubuntu-x86_64-2204-jammy_extra_libs.txt
cmake/: PluginConfigure.cmake  PluginInstall.cmake  PluginPackage.cmake
include/: button.h  dial.h  instrument.h  nmea0183.hpp  odometer_pi.h  speedometer.h
libs/N2KParser/src/: N2KParser.cpp  N2kMessages.cpp  N2kMsg.cpp
libs/ocpn-api/: CMakeLists.txt
manual/: antora.yml  site.yml
manual/modules/ROOT/pages/: index.adoc
manual/odometer/: site.yml
manual/odometer/modules/ROOT/pages/: odometer.adoc
nmea0183/: nmea0183.cpp  nmea0183.hpp
po/: POTFILES.in  ar_SA.po  bg_BG.po  ca_ES.po  cs_CZ.po  da_DK.po  de_DE.po  el_GR.po  en_GB.po  es_EM.po  es_ES.po  et_EE.po  fi_FI.po  fil_PH.po  fr_FR.po  gl_ES.po  gps-odometer_pi.pot  gpsodometer_pi.pot  he_IL.po  hi_IN.po  hu_HU.po  id_ID.po  is_IS.po  it_IT.po  ja_JP.po  ko_KR.po  mr_IN.po  nb_NO.po  nl_NL.po  odometer_pi.pot  pl_PL.po  pt_BR.po  pt_PT.po  ro_RO.po  ru_RU.po  sv_SE.po  th_TH.po  tr_TR.po  vi_VN.po  zh_CN.po  (+1 more)
src/: button.cpp  button.h  dial.cpp  icons.cpp  icons.h  instrument.cpp  instrument.h  nmea0183.cpp  odometer_pi.cpp  odometer_pi.h  speedometer.cpp  version.h
src/nmea0183/: response.hpp  sentence.cpp  sentence.hpp
src/wxJSON/: jsonreader.cpp  jsonval.cpp  jsonwriter.cpp
